[package]
authors = ["Sytronik <sytronik210@gmail.com>"]
categories = ["algorithms"]
description = "pYIN pitch detection algorithm for WASM. Forked from https://github.com/Sytronik/pyin-rs"
edition = "2021"
exclude = ["/samples", "/include", "/test"]
keywords = ["audio", "pitch", "speech", "voice", "wasm"]
license = "MIT"
name = "pyin"
repository = "https://github.com/utheory/wasm-pyin"
version = "1.0.2"

[lib]
crate-type = ["rlib", "cdylib"]
name = "pyin"
path = "src/wasm.rs"

[[bin]]
name = "pyin"
path = "src/wasm.rs"

[dependencies]
approx = "0.5.1"
clap = {version = "3.1.6", features = ["derive"]}
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
getset = "0.1.2"
js-sys = "0.3.58"
libc = "0.2.120"
ndarray = {version = "0.15.4", features = ["rayon", "approx-0_5"]}
ndarray-npy = "0.8.1"
ndarray-stats = "0.5.0"
num-traits = "0.2.14"
rayon = "1.5.1"
realfft = "3.0.0"
rustfft = "6.0.1"
statrs = "0.15.0"
wasm-bindgen = "0.2.81"
